--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,6 @@
     place-items: center;
 }
 
-
-
 body {
     background-color: powderblue;
 }
@@ -14,5 +12,18 @@ h1 {
 }
 
 p {
+    color: red;
+}
+
+.word-box {
+    color: white;
+    font-size: 40px;
+}
+
+.correct-char {
+    color: green;
+}
+
+.incorrect-char {
     color: red;
 }
