--- a/src/style.css
+++ b/src/style.css
@@ -31,3 +31,12 @@ p {
 .incorrect-char {
     color: red;
 }
+
+div {
+    margin: 5px;
+}
+
+input {
+    font-size: 40px;
+    text-align: center;
+}
