--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,17 @@ h1 {
     color: blue;
 }
 
+h3 {
+    font-size: 32px;
+    text-align: center;
+}
+
+button.select {
+    align-content: center;
+    font-size: 20px;
+    width: 300px;
+}
+
 p {
     color: red;
 }
@@ -21,7 +32,7 @@ p {
 
 .word-text {
     color: darkgray; /* change this to powderblue */
-    font-size: 40px;
+    font-size: 150px;
 }
 
 .correct-char {
@@ -34,6 +45,18 @@ p {
 
 div {
     margin: 5px;
+    display: grid;
+    align-items: center;
+}
+
+div.word-text {
+    display: flex;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
 }
 
 input {
