--- a/src/style.css
+++ b/src/style.css
@@ -26,17 +26,26 @@ p {
     color: red;
 }
 
-.word-box {
+div#list-container>div.word-box {
+    background-color: darkgrey;
     color: white;
+    box-shadow: 0 0 0 0;
+}
+
+div#list-container>div.word-input {
+    background-color: darkgrey;
+    color: white;
+    box-shadow: 0 0 0 0;
 }
 
 .word-text {
     color: darkgray; /* change this to powderblue */
     font-size: 150px;
+    box-shadow: 0 0 0 0;
 }
 
 .correct-char {
-    color: green;
+    color: rgb(44, 165, 44);
 }
 
 .incorrect-char {
@@ -49,8 +58,17 @@ div {
     align-items: center;
 }
 
-div.word-text {
+div#list-container>div.word-text {
+    background-color: darkgrey;
+    box-shadow: 0 0 0 0;
     display: flex;
+}
+
+div#list-container>div {
+    background-color: rgb(76, 74, 241);
+    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
 }
 
 ul {
@@ -62,6 +80,7 @@ ul {
 input {
     font-size: 40px;
     text-align: center;
+    
 }
 
 input.simple {
